--- a/gb/23/1/24/n13914724.md
+++ b/gb/23/1/24/n13914724.md
@@ -23,37 +23,37 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/2/n12784417.md#1">黄文星演反派悬吊七楼外 Gino忍惧高跳楼对戏</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/6/8/n13006824.md#1">苏晏霈与黄文星录防疫影片 吁就地过节别返乡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914730.md#1">除夕前罹痛风 台网红“阿滴”急取消过年计划</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914701.md#1">相隔20年参加同学会 谢佳见惊见“这一幕”吓坏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964157.md#1">奇幻喜剧《龙与地下城》登北美周票房榜首</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964424.md#1">倪齐民吊钢丝挂高楼淡定 全身酸痛当“还债”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11704921.md#1" target="_blank">启明：共产党注定灭亡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10147874.md#1" target="_blank">“一打三反”运动：文革中血腥的一幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/28/n8535217.md#1" target="_blank">年轻秘书长年病号 幸遇法轮大法无药而愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910412.md#1">楚一丁：天道示警——三年死了四亿人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13909653.md#1">【未解之谜】西方极乐世界游记（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906912.md#1">传统年俗代代传  只为守护天人相系的纽带</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910383.md#1">【百年真相】差点改写九一三事件 林豆豆挨整始末</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906526.md#1">【百年真相】犯四宗大罪 郭声琨下场如何？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914189.md#1">新世纪影视大法弟子：新年颂师恩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914176.md#1">【新闻大家谈】蓬佩奥曝光白宫秘闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914325.md#1">【菁英论坛】国库已掏空 中共基层在瓦解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13908788.md#1">在Costco买七样东西囤货 可在一整年省钱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913032.md#1">春晚小品演出缩短2分多钟 触发所有应急预案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13912765.md#1">疫情冲击春晚 演员染疫无法排练 节目大删减</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913498.md#1">穿30年前旗袍拜年 55岁周慧敏冻龄外表获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913535.md#1">沈腾春晚小品《坑》窜热搜 话题惊动中纪委</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13912840.md#1">除夕夜广发200个红包 郁方分享有意义的一天</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/21/n13912458.md#1">《天才冲冲冲》初一节目 众星玩游戏爆笑迎春</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914317.md#1">李若彤分享冻龄秘笈：20多年没喝汽水</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/21/n13912386.md#1">大自然是百病良药 多一动作提升止痛、消炎效果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911297.md#1">港大首创“先缩后除”疗法 中期肝癌根治率近55%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913695.md#1">寒冬还没来 2023年影响美国地产的重磅消息！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910496.md#1">学会放下，幸福就来了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905189.md#1">空间小杂物多 运用收纳小物 浴室不再乱糟糟</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963293.md#1">【拍案惊奇】蔡奇要官员向习公布财产防外逃？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963385.md#1">【财商天下】银行危机暂解 美联储还会加息？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/24/n13914724.htm">黄文星1人分饰双胞兄弟两角 演出车祸大场面</a></p><hr>
