--- a/gb/22/11/6/n13860579.md
+++ b/gb/22/11/6/n13860579.md
@@ -54,37 +54,37 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/21/n13807305.md#1">研究发现阿兹海默症一种成因 提出预防方法</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/29/n13813164.md#1">维生素D别滥用 长者吃多失智风险恐增1.8倍</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/2/n13816089.md#1">维生素D恶化失智症？新研究2大争议 这些人该补充</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926405.md#1">研究：运动产生一种蛋白质 可逆转记忆减退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906326.md#1">痴呆症不可逆？资深医师：1方法可延迟或预防</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954466.md#1">这种糖吃多让人变痴呆 专家析原因</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307769.md#1" target="_blank">中共淫乱的前生今世（10）溃堤效应</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015824.md#1" target="_blank">文武：中共篡政（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933053.md#1">情缘未了 美高中生车祸身亡转生女友儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927255.md#1">【百年真相】部长级高官病亡 悼文捅出惊天黑幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932359.md#1">【未解之谜】来自星星的孩子（2）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926855.md#1">【救世古鉴】通过色欲门考验  他走过生死关得后福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13929957.md#1">【未解之谜】来自星星的孩子（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934322.md#1">【江峰视界军事】中美争夺近太空 美现秘密武器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934185.md#1">【新闻大家谈】名人密集“被消失”有何内幕？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934667.md#1">【晚间新闻】《小龙人》贝贝扮演者陈晨猝逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933226.md#1">江西三名警务人员查酒驾 全被嫌疑人刺死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13932976.md#1">王毅慕尼黑讲话企图分裂美欧 反遭嘲讽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933167.md#1">马云现身澳大利亚 消息冲上热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932882.md#1">杜琪峯柏林影展抨击独裁 相关微博账号遭封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934353.md#1">46岁海清自曝患怪病 无药可治恐退出演艺圈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933589.md#1">写春联钦点“有缘人”周星驰在越南招募演员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934335.md#1">北美巡演惹祸？ 脱口秀演员池子遭中宣部封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933929.md#1">六小龄童：86版《西游记》副导演任凤坡病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931268.md#1">计划夏天出国旅游吗？这些事你要知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933339.md#1">肥猫变成波兰著名旅游景点 获5颗星评价</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932028.md#1">罐头果汁妙用多 教你12个好味吃法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932585.md#1">一张食疗处方 三个月解决“津液亏损”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924996.md#1">自制墨西哥卷饼3个小技巧 好吃又不漏馅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/6/n13860579.htm">阿兹海默症主流病因可能是错的？专家：是自身免疫疾病</a></p><hr>
