--- a/gb/23/2/1/n13919753.md
+++ b/gb/23/2/1/n13919753.md
@@ -21,41 +21,41 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/6/23/n13041508.md#1">议长邱奕胜争取国道一号中丰交流道尽速动工</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894078.md#1">立法院交通委员会  桃园视察交通建设</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13909678.md#1">桃园纾解新年车流  中坜“兴北二路”提前通车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957291.md#1">世界结核病日有效战胜结核病 潜伏结核揪出来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957326.md#1">狒狒出没 桃园高解析度热成像仪器搜寻没找到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957248.md#1">八德荣家温德尔幼儿园 促进代间交流及融合</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957251.md#1">桃园托幼到托老距离遥远 黄敬平：排队等7年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957286.md#1">桃园“952”南崁-板桥24辆公车全新上路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956932.md#1">桃园狒狒逃脱中 林务局：勿眼神对视、露齿笑</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964207.md#1">3好生活型态   乐天球团携手共推桃园循环杯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964203.md#1">孩子注意力不佳与过动   寻求专业减缓</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963550.md#1">老妇怒离家失踪影 员警与计程车司机联手劝回</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962451.md#1">“如果我是一面镜子”邀亲子来一探究“镜”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962213.md#1">纾缓照顾者负担 联新好棒社区长照机构开幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962326.md#1">桃园金鞍公司大型离峰储冰系统动土 落实净零</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180163.md#1" target="_blank">【征文】章阁：中国古代专制吗（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/2/n8993904.md#1" target="_blank">【细语人生】见证大法的神奇（3）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/1/n11226848.md#1" target="_blank">共产暴政录：越共排华事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285652.md#1" target="_blank">澳洲各级政要褒奖祝贺法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953285.md#1">独家：“神的指引” 中领馆员工成功出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951097.md#1">【百年真相】30岁自尽 钢琴家顾圣婴悲歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954628.md#1">【百年真相】晚年街头乞讨 大师叶企孙往事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957046.md#1">【神韵早期节目】儒生抒怀（2015年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957008.md#1">【新唐人大视野】经济数据公布 习替李强解围？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956635.md#1">【时事军事】这仗没法打了 俄乌伤亡10：1</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13956211.md#1">习近平临走时对普京说了句啥？媒体人解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955727.md#1">习近平访俄有异常细节 专家：普京话中有话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955924.md#1">“新冠没有消失” 张文宏谈下一轮疫情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955715.md#1">艾成离世7个月 40岁胞弟艾翔心肌梗塞离世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955990.md#1">刘真离世三周年 辛龙发41秒片再度缅怀亡妻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13955475.md#1">消失一年半 赵薇被拍到手持身份证现身机场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13954943.md#1">与陈亚兰合作新戏 检场挑战“没台词”角色</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954710.md#1">孙红雷首次被女儿夸帅 逗趣反应笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13948030.md#1">为何每天喝3杯这种茶 可以逆转衰老3年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954459.md#1">樱桃抗癌减肥、治痛风  但吃时要注意1件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954551.md#1">全方位保持卧室干净舒适的清洁技巧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955685.md#1">晒太阳更致癌还是更抗癌？这样晒太阳才安全</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941432.md#1">适合女性的“168间歇性断食” 6周可见效</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/1/n13919753.htm">国道1号增设中坜中丰交流道开工  114年底完工</a></p><hr>
