--- a/gb/23/2/12/n13928383.md
+++ b/gb/23/2/12/n13928383.md
@@ -21,44 +21,39 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13927881.md#1">新州工党承诺设过路费上限 联盟党拟增加充电桩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13927797.md#1">末日灾难中 哪些国家生存率最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13927793.md#1">新州政府成立专家组 为Mascot业主找出路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13927788.md#1">ANZ：现金利率有涨至逾4%的风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927359.md#1">增强军力 对抗中共 澳拟建史上最强军舰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927308.md#1">水浸电动滑板车引发火灾 消防机构发警告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927293.md#1">技术发展或致信件邮递业务5年内消失</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927299.md#1">驾车者违反鲜为人知交规 遭近千元罚款</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927279.md#1">南澳州长下令审查政府楼内中国造监控设备</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063136.md#1">昆州中学频现闹事违纪学生团伙</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063131.md#1">报告揭昆州多地今春山火风险高</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14062996.md#1">报告：悉大去年逾百员工及学生遭性攻击</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063089.md#1">提高新移民语言与就业能力 政府追加投资</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063104.md#1">工党上台后 庇护签证申请量大增</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063061.md#1">南澳教师工会决定9月1日罢工</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063059.md#1">阿市小学12岁男生被控刺伤一女生</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063048.md#1">Toplace旗下再有公寓楼被查出严重缺陷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063030.md#1">昆州招聘广告薪资增长5.3% 全澳领先</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14062995.md#1">一澳女大脑中取出8厘米长寄生虫 世界首例</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307016.md#1" target="_blank">心升：以史为镜看毛邪（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/9/n11374288.md#1" target="_blank">一对年轻夫妻“破镜重圆”的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/10/n11375488.md#1" target="_blank">冤狱11年半 前大陆律师堂堂正正反迫害 ?</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924979.md#1">【未解之谜】风水高人揭秘：富贵的秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923685.md#1">【百年真相】故意黑江青？上海公安局长被关7年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13921208.md#1">【品读唐诗】诗仙李白的“寻隐者不遇”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920929.md#1">中国人，谁能拯救你？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923126.md#1">【节气养生】立春怎么顺时“养生”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927307.md#1">【未解之谜】改命用错招 预言大师难逃宿命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13927801.md#1">【时事军事】韩国造核弹 不好玩儿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927748.md#1">【马克时空】俄乌战争将满周年 俄军还有后劲吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926653.md#1">林郑月娥新职务曝光 分析：被中共抛弃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927280.md#1">六中企参与气球监视计划 被美列入黑名单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926456.md#1">分析：医改触及根本利益 抗共民众会更多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926612.md#1">陆综男星唐小强土耳其强震中遇难 年仅30岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927287.md#1">曾身陷囹圄财产归零 刘晓庆开直播卖书法作品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927303.md#1">舒淇甜蜜放闪冯德伦“老公在哪家就在哪”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926541.md#1">开直播惊遇粉丝遭家暴 陆名嘴张大大在线吓傻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926523.md#1">香港金像奖公布提名 郑秀文第7次入围影后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926920.md#1">浴巾如何清洗才会柔软和吸水？ 专家告诉你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923230.md#1">不用昂贵眼霜 13个经典自然疗法缓解黑眼圈、黑眼袋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927000.md#1">睽违三年 札幌冰雪节壮观雪雕巡礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926617.md#1">研究发现特定时间入睡 患心血管疾病风险最低</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927436.md#1">新拐点！湾区房地产或迎来买方市场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/12/n13928383.htm">昆州丛林大火肆虐 居民被促撤离</a></p><hr>
