--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -121,7 +121,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10172889.md#1" target="_blank">袁斌：中共抓壮丁连老弱小孩也不放过</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/9/n10770724.md#1" target="_blank">裴毅然：毛泽东真诚“感谢皇军”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
