--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -114,14 +114,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053956.md#1">【更新】乔州选举案 川普等被指控41项罪名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065904.md#1">拜登将访佛州 在飓风伊达利亚过后提供支持</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065850.md#1">美驻日大使访福岛 吃海鲜 支持日本</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065751.md#1">程翔：认识中共的隐蔽战线（1）——内外交困 煽动全民反间谍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065738.md#1">“永不忘记 永不原谅”金山湾区港人纪念8?31事件四周年</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11132788.md#1" target="_blank">【征文】千百度：上古三代时期的天命观（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490487.md#1" target="_blank">“感受到强大能量”塞浦路斯女子走入修炼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196004.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(1)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/20/n10862733.md#1" target="_blank">这些前中共军官为何控告江泽民（8）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
