--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -121,7 +121,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">共产暴政录：儿子告发母亲致其母被处决</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -131,8 +131,8 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063481.md#1">日本礼法之形成与社会功能</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065900.md#1">【全球新闻】宝马“新世代”概念车全球首发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065849.md#1">【全球新闻】强台风苏拉珠海登陆 海葵扑向台湾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066016.md#1">【新闻五人行】习步步惊心 亡党十大败相齐了</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066063.md#1">【菁英论坛】吏治匪式化 中国社会失控中</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065965.md#1">【时事金扫描】日韩首脑吃海鲜 强台登陆广东</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065150.md#1">李克强游敦煌莫高窟视频热传 引热议</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064949.md#1">涿州洪水中驻军部队坦克飞机被毁 无人担责</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064914.md#1">捷克国家银行出清所有人民币资产</a></li>
